syntax = "proto3";

package notification;


option go_package = "github.com/SabinGhost19/go-micro-payment/proto/notificationpb";

// Notification service for sending user/system notifications
service NotificationService {
  // Send email
  rpc SendEmail (SendEmailRequest) returns (NotifyResponse) {}
  // Send SMS
  rpc SendSMS (SendSMSRequest) returns (NotifyResponse) {}
}

// Email notification
message SendEmailRequest {
  string user_id = 1;
  string to = 2;
  string subject = 3;
  string body = 4;
}

// SMS notification
message SendSMSRequest {
  string user_id = 1;
  string phone_number = 2;
  string message = 3;
}

// Syntax-agnostic generic notification response
message NotifyResponse {
  bool success = 1;
  string message = 2;
}
